--- a/app/views/share/myacount.html.erb
+++ b/app/views/share/myacount.html.erb
@@ -1,4 +1,3 @@
-<%= link_to 'index',pages_index_path %>
 <!doctype html>
 <html>
 <head>
@@ -6,10 +5,9 @@
   <title>SmartAgent</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <%= stylesheet_link_tag 'bootstrap' %>
-  <%= stylesheet_link_tag 'smartagent' %>
-  <%= stylesheet_link_tag 'sticky-footer-navbar' %>
-
+  <%= stylesheet_link_tag "bootstrap" %>
+  <%= stylesheet_link_tag "smartagent" %>
+  <%= stylesheet_link_tag "sticky-footer-navbar" %>
 </head>
 
 <body>
@@ -70,7 +68,6 @@
   </div>
 </div>
 <%= render "share/footer" %>
-
 
 <script src="js/jquery.js"></script>
 
