--- a/app/views/pages/myapps.html.erb
+++ b/app/views/pages/myapps.html.erb
@@ -17,35 +17,22 @@
 
       <div class="tab-content">
         <div class="tab-pane fade active in" id="dingzhi">
+            <table>
+              <thead>
+                <th>AppName</th>
+              </thead>
+              <tbody>
+                <% @apps.each do |f| %>
+                    <tr>
+                      <td><%= f.name %></td>
+                      <td><%= link_to 'Destory', [current_user, f], method: :delete, data: {confirm: 'are you sure?'} %></td>
+                    </tr>
 
-          <div class="myapp col-md-offset-1">
-            <p class="myapp_title">
-              提醒跑步应用
-            </p>
-            <p class="myapp_des">
-              如果明天早晨天气好，提醒我去跑步
-            </p>
-            <img src="img/applicationexp.png" width="30%">
+                <% end %>
+              </tbody>
 
+            </table>
 
-
-
-            <button type="button" class="btn btn-default btn-lg startapp">
-              <span class="glyphicon glyphicon-off"></span>
-            </button>
-
-            <button type="button" class="btn btn-default btn-lg shareapp">
-              <span class="glyphicon glyphicon-share"></span>
-            </button>
-
-            <button type="button" class="btn btn-default btn-lg editapp">
-              <span class="glyphicon glyphicon-edit"></span>
-            </button>
-
-
-
-
-          </div>
         </div>
         <div class="tab-pane fade" id="fengxiang">
           <div class="myapp col-md-offset-1">
