--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,8 @@
 <html>
 <head>
   <title>SmartAgent</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-
-  <%= stylesheet_link_tag "bootstrap" %>
-  <%= stylesheet_link_tag "smartagent" %>
-  <%= stylesheet_link_tag "sticky-footer-navbar" %>
-
-  <%= stylesheet_link_tag "grumble.min" %>
-  <%= stylesheet_link_tag "bootstrap.min" %>
-  <%= stylesheet_link_tag "bootstrap-theme.min" %>
 
   <%= csrf_meta_tags %>
 </head>
