--- a/app/views/share/_footer.html.erb
+++ b/app/views/share/_footer.html.erb
@@ -1,10 +1,10 @@
-<div id="footer">
+<div class="navbar-fixed-bottom" align="center">
   <p>
     <a href="contactus">联系我们</a>
     <a href="contactus">关于</a>
     <a href="contactus">法律声明</a>
   </p>
-  <p>
+  <p align="center">
     2014 pku ubicomp版权所有
   </p>
 </div>
