--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,12 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+
+ *= require bootstrap/bootstrap
+ *= require bootstrap/bootstrap.min
+ *= require bootstrap/bootstrap-responsive
+ *= require bootstrap/bootstrap-responsive.min
  *= require_tree .
  *= require_self
+
  */
