--- a/app/views/pages/myapps.html.erb
+++ b/app/views/pages/myapps.html.erb
@@ -1,5 +1,6 @@
 <div id="wrap">
   <%= render "share/header" %>
+  <% if login? %>
   <div class="container">
 
     <div class="tabbable tabs-left">
@@ -83,15 +84,12 @@
       </div>
     </div>
   </div>
-
+<% else %>
+      <h2 align="center">未登录!</h2>
+<% end %>
 </div>
 
 <%= render "share/footer" %>
 <!--script src="js/Bubble.js?v=5"></script>
 <script src="js/jquery.grumble.js?v=5"></script-->
 
-
-<%= javascript_include_tag "jquery" %>
-<%= javascript_include_tag "bootstrap.min" %>
-<%= javascript_include_tag "jquery.grumble.min" %>
-<%= javascript_include_tag "myapplication" %>
