--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -1,38 +1,22 @@
-<div class="navbar navbar-inverse navbar-fixed-top" style="background: #34495E; height: 40px">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
-    <div class="nav-collapse collapse">
-      <ul class="nav" style="font-size: 23px">
-        <li><%= link_to '我的应用', myapps_path%></li>
-        <li><%= link_to '创建应用', createapp_path %></li>
-        <li><%= link_to '浏览应用', apps_path %></li>
-        <li><%= link_to '所有资源', resources_path %></li>
-        <% if login? %>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
-              <span class="dropdown-arrow"></span>
-              <ul class="dropdown-menu dropdown-arrow-inverse">
-                <li><%= link_to '账号管理', index_path %></li>
-                <li><%= link_to '操作记录', index_path %></li>
-                <li><%= link_to '退出登陆', log_out_path %></li>
-                <li class="divider"></li>
-                <li><%= link_to '开发者模式' ,developer_path %></li>
-              </ul>
-            </li>
-        <% else %>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown">未登录<b class="caret"></b></a>
-              <span class="dropdown-arrow"></span>
-              <ul class="dropdown-menu dropdown-arrow-inverse">
-                <li><%= link_to '登录', root_path %></li>
-                <li><%= link_to '注册', sign_up_path %></li>
-              </ul>
-            </li>
-        <% end %>
-      </ul>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Project name</a>
     </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
   </div>
 </div>
 
 
-<%= javascript_include_tag "jquery.min.js" %>
-<%= javascript_include_tag "bootstrap/bootstrap.min.js" %>
