--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -7,16 +7,31 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <%= link_to 'SmartAgent', index_path, :class => "navbar-brand" %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><%= link_to '我的应用', myapps_path, :class => "active" %></li>
+        <li><%= link_to '创建应用', createapp_path %></li>
+        <li><%= link_to '浏览应用', apps_path %></li>
+        <li><%= link_to '所有资源', resources_path %><li>
+        <% if login? %>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to '账号管理', index_path %></li>
+            <li><%= link_to '操作记录', index_path %></li>
+            <li><%= link_to '退出登录', log_out_path %></li>
+            <li class="divider"></li>
+            <li><%= link_to '开发者模式', developer_path %></li>
+          </ul>
+        <% else %>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">未登录<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to '登录', root_path %></li>
+            <li><%= link_to '注册', sign_up_path %></li>
+          </ul>
+        <% end %>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
 </div>
-
-
