重新设计了首页的布局，导航条

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,7 @@
 <head>
   <title>SmartAgent</title>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-
-  <%= stylesheet_link_tag "bootstrap" %>
-  <%= stylesheet_link_tag "smartagent" %>
-  <%= stylesheet_link_tag "sticky-footer-navbar" %>
-
-  <%= stylesheet_link_tag "grumble.min" %>
-  <%= stylesheet_link_tag "bootstrap.min" %>
-  <%= stylesheet_link_tag "bootstrap-theme.min" %>
+  <%= stylesheet_link_tag "application" %>
 
   <%= csrf_meta_tags %>
 </head>
