--- a/app/views/share/_footer.html.erb
+++ b/app/views/share/_footer.html.erb
@@ -1,10 +1,12 @@
-<div id="footer">
-  <p>
+<div class="footer">
+  <div class="container">
+    <p>
     <a href="contactus">联系我们</a>
     <a href="contactus">关于</a>
     <a href="contactus">法律声明</a>
-  </p>
-  <p>
-    2014 pku ubicomp版权所有
-  </p>
+    </p>
+    <p>
+    <%= Date.current.year %> Peking University &amp; Ubicomp
+    </p>
+  </div>
 </div>
