--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -1,40 +1,28 @@
 <!-- Fixed navbar -->
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <%= link_to image_tag('logo.png',:class=>'img-responsive',:width=>'140px'),pages_index_path,:class => "navbar-brand"%>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li><%= link_to '我的应用', pages_myapps_path %></li>
-        <li><%= link_to '创建应用', pages_createapp_path %></li>
-        <li><%= link_to '浏览应用', pages_apps_path %></li>
-        <li><%= link_to '所有资源', pages_resources_path %></li>
-        <li class="dropdown">
+<div class="navbar navbar-fixed-top" role="navigation">
+  <div class="navbar-inner">
+    <div class="container">
+      <%= link_to '',pages_index_path,:class => "navbar-brand"%>
+      <div class="pull-left">
+        <span class="logo-text">你生活的智能代理</span>
+      </div>
+      <ul class="nav navbar-nav pull-right">
+        <% if login? %>
 
-          <% if login? %>
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=current_user.email%><span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><%= link_to '账号管理', pages_index_path %></li>
-                <li><%= link_to '操作记录', pages_index_path %></li>
-                <li><%= link_to '退出登陆', log_out_path %></li>
-                <li class="divider"></li>
-                <li><%= link_to '开发者模式' ,pages_developer_path %></li>
-              </ul>
-          <% else %>
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">未登录<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><%= link_to '登录', root_path %></li>
-                <li><%= link_to '注册', sign_up_path %></li>
-              </ul>
-          <% end %>
-
-        </li>
+        <% else %>
+          <li>
+          <a href="#">登陆</a>
+          </li>
+          <li class="or">
+          <span>还是</span>
+          </li>
+          <li>
+          <a href="#">注册</a>
+          </li>
+        <% end %>
       </ul>
-    </div><!--/.nav-collapse -->
+    </div>
   </div>
-</div>
+</div><!--/.nav-collapse -->
 
-<%= javascript_include_tag "bootstrap.min" %>
-<%= javascript_include_tag "jquery.grumble.min" %>
 
