--- a/app/views/pages/createapp.html.erb
+++ b/app/views/pages/createapp.html.erb
@@ -1,21 +1,24 @@
-<<<<<<< HEAD
+<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+
+<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+<script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <%= render "share/header" %>
+<div>
+<button class="btn btn-lg" data-toggle="modal" data-target="CreateSensor">
+	Create Sensor
+</button>
+<button class="btn btn-lg" data-toggle="modal" data-target="CreateActuator">
+	Create Actuator
+</button>
+	<div class="moda fade" id="CreateSensor" tabindex="-1" role="dialog" aria-labelledby="SensorLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				sensor contents
+			</div>
+		</div>
+	</div>
+</div>
 
-<% if login? %>
-    <%= form_for [current_user, @app] do |f| %>
-    <%= f.label 'App Name' %><%= f.text_field :name %>
-    <br />
-    <%= f.submit'Create App' %>
-    <% end %>
-<% else %>
-    <h2 align="center">未登录!</h2>
-=======
- <%= render "share/header" %>
-
-<%= form_for [current_user, @app] do |f| %>
-    <%= f.label 'App Name' %><%= f.text_field :name %>
-    <br />
-    <%= f.submit'Create App' %>
->>>>>>> c9c71db62280f902060ec0e2387ec4db1a05a128
-<% end %>
 <%= render "share/footer" %>
