优化了部分界面，尝试了创建应用的模态框

--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -1,23 +1,26 @@
 <!-- Fixed navbar -->
 <div class="navbar navbar-fixed-top" role="navigation">
-  <div class="navbar-inner">
-    <div class="container">
-      <%= link_to '',pages_index_path,:class => "navbar-brand"%>
-      <div class="pull-left">
-        <span class="logo-text">你生活的智能代理</span>
-      </div>
+  <div class="container">
+    <%= link_to '', '#',:class => "navbar-brand"%>
+    <div class="pull-left">
+      <span class="logo-text">你生活的智能代理</span>
+    </div>
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav pull-right">
-        <% if login? %>
-
+        <% if signin? %>
+          <li><%= link_to "创建应用", pages_createapp_path %></li>
+          <li><%= link_to "浏览应用", pages_apps_path %></li>
+          <li><%= link_to "浏览资源", pages_resources_path %></li>
+          <li><%= link_to "用户", '#' %></li>
         <% else %>
           <li>
-          <a href="#">登陆</a>
+          <%= link_to "登陆", signin_path %>
           </li>
           <li class="or">
           <span>还是</span>
           </li>
           <li>
-          <a href="#">注册</a>
+          <%= link_to "注册", signup_path %>
           </li>
         <% end %>
       </ul>
