--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,8 @@ body {
 
 //设置header
 .navbar {
+  background-color: #fff;
+
   .navbar-brand {
     width: 200px;
     background-image: image-url("logo2.png");
@@ -29,16 +31,39 @@ body {
     color:#aaa;
     } 
    }
+//设置alert条
+.alert {
+  margin-top: 10px;
+}
+//设置form
+.form-group {
+
+  .form-control {
+    width:25%;
+  }
+
+  label{
+    color:#fff;
+  }
+
+
+}
 
 //设置main
 .main {
   margin-top: 51px;
+
+
+.form {
+  margin-left:10%;
+ }
 .top {
   padding:40px 0;
   background-image: image-url("top1.jpg");
   background-repeat: no-repeat;
   background-position: 50% 45%;
   //margin:1px 0 15px 0;
+  margin-top: 10px;
   min-height:300px;
 
   h1 {
@@ -47,7 +72,8 @@ body {
     //font-weight:bold;
     margin-top: 40px;
     letter-spacing:.05em;
-
+    margin-bottom: 20px;
+    
     .you {
       font-weight:bold;
      }
@@ -57,6 +83,11 @@ body {
       padding-left:0.3em;
       color:#fff;
       font-size: 32px;
+    }
+
+    h5 {
+      color: #fff;
+      font-size: 16px;
     }
 }
 //设置middle
