--- a/app/views/pages/createapp.html.erb
+++ b/app/views/pages/createapp.html.erb
@@ -1,8 +1,59 @@
- <%= render "share/header" %>
+<%= render "share/header" %>
+<div class="main">
+  <div class="container">
+    <%= form_for [current_user, @app] do |f| %>
+      <%= f.label 'App Name' %><%= f.text_field :name %>
+      <br />
+      <%= f.submit'Create App' %>
+    <% end %>
+  </div>
 
-<%= form_for [current_user, @app] do |f| %>
-    <%= f.label 'App Name' %><%= f.text_field :name %>
-    <br />
-    <%= f.submit'Create App' %>
-<% end %>
-<%= render "share/footer" %>
+  <!-- Button trigger modal -->
+  <%= button_to "传感器", sensors_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg", "data-target" => "#sensor" %>
+  <!--<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#sensor" >
+   传感器 
+ </button>-->
+  
+  <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#actuator">
+   执行器 
+  </button>
+  <!-- sensor Modal -->
+  <div class="modal fade" id="sensor" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="myModalLabel">Sensor</h4>
+        </div>
+        <div class="modal-body">
+          <%= render partial: 'sensors/list', locals: { sensors: @sensors}  %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- actuator Modal -->
+  <div class="modal fade" id="actuator" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="myModalLabel">Actuator</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+          <%#= button_to "A post", @post, remote: true %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <%= render "share/footer" %>
