--- a/app/views/pages/createapp.html.erb
+++ b/app/views/pages/createapp.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <!-- Button trigger modal -->
-  <%= button_to "传感器", sensors_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg", "data-target" => "#sensor" %>
+  <%= button_to "传感器", sensors_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %>
   <!--<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#sensor" >
    传感器 
  </button>-->
