--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -1,30 +1,17 @@
-<div id="wrap">
-  <%= render "share/header" %>
+<%= render "share/header" %>
+<div class="main">
   <div class="container">
-    <div class="row">
-      <div class="input-group input-group-lg col-md-4 col-md-offset-1" style="padding-bottom:40px">
-        <input type="text" class="form-control" placeholder="请输入关键字">
-				  <span class="input-group-addon">
-				  <a href="./search.jsp"><span class="glyphicon glyphicon-search"></span></a>
-				  </span>
-      </div>
-      <a href="./search" class="btn btn-primary" role="button">查看已经激活的资源</a>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <img src="img/u68.png" class="img-responsive" />
-      </div>
-      <div class="col-md-6">
-        <img src="img/u32.jpg" class="img-responsive"/>
-      </div>
-    </div>
+    <div class="search">
+      <%= form_tag '#', class: "form-search" do %>
+        <%= text_field_tag "search", "", :class => 'search-query'  %>
+        <%= button_tag "搜索", class: 'btn' %>
+      <% end %>
 
+    </div>
   </div>
-
 </div>
+
 <%= render "share/footer" %>
 
 
-<script src="js/jquery.js"></script>
 
-<script src="js/bootstrap.min.js"></script>
