--- a/app/views/sensors/index.js.erb
+++ b/app/views/sensors/index.js.erb
@@ -1,1 +1,6 @@
-$('#sensor .modal-body').html("<%= escape_javascript(render partial: 'sensors/list', locals: { sensors: @sensors}) %>")
+$(function() {
+    $('#sensor .modal-body').html("<%= escape_javascript(render partial: 'sensors/list', locals: { sensors: @sensors}) %>")
+
+    $('#sensor').modal('show')
+
+  })
