--- a/app/views/share/_footer.html.erb
+++ b/app/views/share/_footer.html.erb
@@ -10,5 +10,7 @@
     </p>
   </div>
 </div>
-
+<div class="container">
+<%= debug(params) if Rails.env.development? %>
+</div>
 <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
