--- a/app/views/pages/createapp.html.erb
+++ b/app/views/pages/createapp.html.erb
@@ -7,10 +7,10 @@
     <!--<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#sensor" >
       传感器 
     </button>-->
-    <%= button_to "触发器", actuators_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg", "data-target" => "#actuator" %> 
+    <%= button_to "触发器", actuators_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %> 
 
     <!-- sensor Modal -->
-    <div class="modal fade" id="sensor" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="resource" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
