--- a/app/views/sensors/_list.html.erb
+++ b/app/views/sensors/_list.html.erb
@@ -1,10 +1,14 @@
-
 <ul>
-  <% if sensors %>
-	<% sensors.each do |s| %>
-	  <li><%= s.name %></li>
-	  <li><%= link_to "show", s, {remote: true}%></li>
-	  <li><%= s.capbility %></li>
+	<% if sensors %>
+		<% sensors.each_index do |i| %>
+			<li><%= link_to sensors[i].name, sensors[i], {remote: true} %></li>
+			
+			<% identifications[i].each do |k,v| %>
+				<li><%= k.to_s %>:</br><%= v.to_s %><li>
+			<% end %>
+			<% descriptions[i].each do |k,v| %>
+				<li><%= k.to_s %>:</br><%= v.to_s %></li>
+			<% end %>
+		<% end %>
 	<% end %>
-  <% end %>
 </ul>
