--- a/app/views/actuators/index.js.erb
+++ b/app/views/actuators/index.js.erb
@@ -1,3 +1,3 @@
-$('#resource .modal-body').html("<%= escape_javascript(render partial: 'actuators/list', locals: { actuators: @actuators}) %>")
+$('#resource .modal-body').html("<%= escape_javascript(render partial: 'actuators/list', locals: { actuators: @actuators, identifications: identifications, descriptions: descriptions}) %>")
 
 $('#resource').modal('show')
