传递应用创建中的参数

--- a/app/views/actuators/_labels.html.erb
+++ b/app/views/actuators/_labels.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :app, url: "#"  do |f| %>
+<%= form_for :params, url: buildactuator_path  do |f| %>
   <% labels.each do |k, v| %>
 	<%= f.label v %>
 	<%= f.text_field k %>
