--- a/app/views/pages/createapp.html.erb
+++ b/app/views/pages/createapp.html.erb
@@ -9,6 +9,10 @@
     </button>-->
     <%= button_to "触发器", actuators_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %> 
 
+
+    <%= button_to "创建应用", user_apps_path(current_user), class: "btn btn-primary btn-lg" %> 
+
+
     <!-- sensor Modal -->
     <div class="modal fade" id="resource" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
