--- a/app/views/sensors/_labels.html.erb
+++ b/app/views/sensors/_labels.html.erb
@@ -1,6 +1,4 @@
-<%= form_for :app, url: '#' do |f| %>
-<%= f.label :sensor %>
-<%= f.text_field :sensor_id, sensor_id.to_s %>
+<%= form_for :condition, url: buildsensor_path do |f| %>
 <% labels.each do |k, v| %>
 	<%= f.label v %>
 	<%= f.text_field k %>
