--- a/app/views/pages/createapp.html.erb
+++ b/app/views/pages/createapp.html.erb
@@ -7,47 +7,27 @@
     <!--<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#sensor" >
       传感器 
     </button>-->
-    <%= button_to "触发器", actuators_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %> 
+    <%= button_to "执行器", actuators_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %> 
 
 
     <%= button_to "创建应用", user_apps_path(current_user), class: "btn btn-primary btn-lg" %> 
 
 
-    <!-- sensor Modal -->
+    <!-- Modal -->
     <div class="modal fade" id="resource" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content clearfix">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <h4 class="modal-title" id="myModalLabel">Sensor</h4>
+            <h4 class="modal-title" id="myModalLabel"></h4>
           </div>
-          <div class="modal-body"></div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
+          <div class="modal-body clearfix"></div>
         </div>
       </div>
     </div>
 
-    <!-- actuator Modal -->
-    <div class="modal fade" id="actuator" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <h4 class="modal-title" id="myModalLabel">Actuator</h4>
-          </div>
-          <div class="modal-body"></div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 
 </div>
 
-    <%= render "share/footer" %>
+<%= render "share/footer" %>
