--- a/app/views/share/_footer.html.erb
+++ b/app/views/share/_footer.html.erb
@@ -11,6 +11,8 @@
   </div>
 </div>
 <div class="container">
-<%= debug(params) if Rails.env.development? %>
+  <%= debug(params) if Rails.env.development? %>
+
+  <%= debug session  %>
 </div>
 <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
