--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -11,7 +11,7 @@
           <li><%= link_to "创建应用", pages_createapp_path %></li>
           <li><%= link_to "浏览应用", pages_apps_path %></li>
           <li><%= link_to "浏览资源", pages_resources_path %></li>
-          <li><%= link_to "用户", '#' %></li>
+          <li><%= link_to "我", pages_index_path %></li>
         <% else %>
           <li>
           <%= link_to "登陆", signin_path %>
