--- a/app/views/pages/createapp.html.erb
+++ b/app/views/pages/createapp.html.erb
@@ -1,68 +1,45 @@
-<div id="wrap">
+<%= render 'share/header' %>
 
-  <div id="main">
-    <div class="row" style="margin-right:0">
-      <div class="col-md-12">
-        <div id="cacontainer" ondrop="drop(event)" ondragover="allowdrop(event)">
-          <div id="help"></div>
-          <div class="triggerdiv">
-         	<!-- <p>触发器名称：</p>
-          	<p>触发器描述：</p>-->
-          	<div style="position:relative;top:0;right:0;">
-            	<canvas id="triggercanvas"  style="border:0;" draggable="true" ondrag="drag(event);" ondragstart="dragstart(event);"> </canvas>
+<div id="main">
+  <div class="container" >
+    <div id="cacontainer" ondrop="drop(event)" ondragover="allowdrop(event)">
+      <div id="help"></div>
+      <div id="triggerdiv">
+        <!-- <p>触发器名称：</p>
+        <p>触发器描述：</p>-->
+        <div style="position:relative;top:0;right:0;">
+          <canvas id="triggercanvas"  style="border:0;" draggable="true" ondrag="drag(event);" ondragstart="dragstart(event);"> </canvas>
+        </div>
+        <div id="triggertitle" style="position:absolute;top:-40px;font-size:20px;color:#330033">触发器</div>
+        <div id="triggercontent" style="position:absolute;top:40%;left:25%;">
+          <%= button_to "触发器", sensors_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %>
+        </div> 
+      </div>
+
+      <div id="actuatordiv" ondrop="drop2(event)" ondragover="allowdrop2(event)">
+        <div style="position:relative;top:0;right:0;">
+          <canvas id="actuatorcanvas" style="border:0;"  draggable="true" ondrag="drag(event);" ondragstart="dragstart(event);" ondragover="allowdrop(event)"> </canvas>
+        </div>
+        <div id="actuatortitle" style="position:absolute;top:-40px;font-size:20px;color:#330033">执行器</div>
+        <div id="actuatorcontent" style="position:absolute;top:40%;left:25%;">
+          <%= button_to "执行器", actuators_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %> 
+        </div> 
+      </div>
+      <!-- actuator Modal -->
+      <div class="modal fade" id="resource" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+              <h4 class="modal-title" id="myModalLabel">Actuator</h4>
             </div>
-            <div id="triggertitle" style="position:absolute;top:-40px;font-size:20px;color:#330033">触发器</div>
-            <div id="triggercontent" style="position:absolute;top:40%;left:25%;">
-              <%= button_to "触发器", sensors_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %>
-              <!-- sensor Modal -->
-   			 			<div class="modal fade" id="resource" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      					<div class="modal-dialog">
-        					<div class="modal-content">
-          					<div class="modal-header">
-            					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            					<h4 class="modal-title" id="myModalLabel">Sensor</h4>
-          					</div>
-          					<div class="modal-body"></div>
-          					<div class="modal-footer">
-            					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            					<button type="button" class="btn btn-primary">Save changes</button>
-          					</div>
-        					</div>
-      					</div>
-    					</div>
-          	</div> 
+            <div class="modal-body clearfix"></div>
           </div>
-          
-          <div class="actuatordiv" ondrop="drop2(event)" ondragover="allowdrop2(event)">
-            <div style="position:relative;top:0;right:0;">
-            	<canvas id="actuatorcanvas" style="border:0;"  draggable="true" ondrag="drag(event);" ondragstart="dragstart(event);" ondragover="allowdrop(event)"> </canvas>
-           	</div>
-           	<div id="actuatortitle" style="position:absolute;top:-40px;font-size:20px;color:#330033">执行器</div>
-            <div id="actuatorcontent" style="position:absolute;top:40%;left:25%;">
-            	<%= button_to "执行器", actuators_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %> 
-            </div> 
-          </div>
-          <!-- actuator Modal -->
-    			<div class="modal fade" id="actuator" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      			<div class="modal-dialog">
-        			<div class="modal-content">
-          			<div class="modal-header">
-            			<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            			<h4 class="modal-title" id="myModalLabel">Actuator</h4>
-          			</div>
-          		<div class="modal-body"></div>
-          		<div class="modal-footer">
-            		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            		<button type="button" class="btn btn-primary">Save changes</button>
-          		</div>
-        		</div>
-      		</div>
-    		</div>
-  		</div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-</div>
-</div>
+
 
 <%= render "share/footer" %>
