--- a/app/views/pages/createapp.html.erb
+++ b/app/views/pages/createapp.html.erb
@@ -41,5 +41,6 @@
   </div>
 </div>
 
+<%= link_to "", app_confirm_path, method: :get,  remote: true, id: 'hidden-a' %>
 
 <%= render "share/footer" %>
