--- a/app/views/sensors/_form.html.erb
+++ b/app/views/sensors/_form.html.erb
@@ -19,6 +19,11 @@
     <%= f.label :capbility %><br>
     <%= f.text_area :capbility %>
   </div>
+  <div class="field">
+    <%= f.label :url %><br>
+    <%= f.text_area :url %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
