完成崔爹接口

--- a/app/views/apps/confirm.js.erb
+++ b/app/views/apps/confirm.js.erb
@@ -2,6 +2,6 @@ console.log('haha');
 
 $('.modal-header h4').html('应用信息');
 
-$('.modal-body').html(<%= j(render 'confirm') %>);
+$('.modal-body').html("<%= escape_javascript(render 'apps/confirm') %>");
 
 $('#resource').modal('show');
