--- a/app/views/apps/_confirm.html.erb
+++ b/app/views/apps/_confirm.html.erb
@@ -1,8 +1,15 @@
 
-
-<%= form_tag '#' do  %>
-  
-  
-
-
+<%= form_tag app_build_path do  %>
+  <div class='form-group'>
+  <%=label_tag '应用名称'  %>
+  <%= text_field_tag :app_name, "", class: 'form-control'  %>
+</div>
+<div class='form-group'>
+  <%= label_tag '应用描述' %>
+  <%= text_field_tag :app_description, "", class: 'form-control' %>
+</div>
+<div class='modal-footer'>
+      <button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
+    <%= submit_tag '确定', class: 'btn btn-primary' %>
+</div>
 <% end %>
