添加了颜色的改动

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,8 +33,13 @@ padding-right: 17px;
    .or {
     margin-top:15px;
     color:#aaa;
-    } 
+    }
+    
    }
+.navbar.navbar-fixed-top {
+    border-bottom:"1";
+    border-bottom-color:#eeeeee;
+    }
 //设置alert条
 .alert {
   margin-top: 10px;
