--- a/app/views/actuators/_form.html.erb
+++ b/app/views/actuators/_form.html.erb
@@ -18,6 +18,10 @@
   <div class="field">
     <%= f.label :capbility %><br>
     <%= f.text_area :capbility %>
+    </div>
+    <div class="field">
+    <%= f.label :url %><br>
+    <%= f.text_field :url %>
   </div>
   <div class="actions">
     <%= f.submit %>
