--- a/app/views/apps/_confirm.html.erb
+++ b/app/views/apps/_confirm.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class='form-group'>
   <%= label_tag '应用描述' %>
-  <%= text_field_tag :app_description, "", class: 'form-control' %>
+  <%= text_area_tag :app_description, "", class: 'form-control' %>
 </div>
 <div class='modal-footer'>
       <button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
