--- a/app/views/pages/createapp.html.erb
+++ b/app/views/pages/createapp.html.erb
@@ -1,5 +1,7 @@
 <%= render 'share/header' %>
 
+
+
 <div class="main">
   <div class="container" >
     <div id="cacontainer" ondrop="drop(event)" ondragover="allowdrop(event)">
@@ -11,7 +13,7 @@
           <canvas id="triggercanvas"  style="border:0;" draggable="true" ondrag="drag(event);" ondragstart="dragstart(event);"> </canvas>
         </div>
         <div id="triggercontent" style="position:absolute;top:40%;left:25%;">
-          <%= button_to "触发器", sensors_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %>
+          <%= button_to "触发器", sensors_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-default btn-lg" %>
         </div> 
       </div>
 
@@ -20,7 +22,7 @@
           <canvas id="actuatorcanvas" style="border:0;"  draggable="true" ondrag="drag(event);" ondragstart="dragstart(event);" ondragover="allowdrop(event)"> </canvas>
         </div>
         <div id="actuatorcontent" style="position:absolute;top:40%;left:25%;">
-          <%= button_to "执行器", actuators_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-primary btn-lg" %> 
+          <%= button_to "执行器", actuators_path, remote: true, method: :get, "data-toggle" => "modal", class: "btn btn-default btn-lg" %> 
         </div> 
       </div>
       <!-- actuator Modal -->
@@ -52,15 +54,8 @@
   		</div>
     </div>
   </div>
-<<<<<<< HEAD
 </div>
 
 <%= link_to "", app_confirm_path, method: :get,  remote: true, id: 'hidden-a' %>
 
 <%= render "share/footer" %>
-=======
-</div>
-</div>
-</div>
-
->>>>>>> 79d57683a11dbaf7ded357f0bbd1493921b0d77a
