--- a/app/views/share/_resource_grid.html.erb
+++ b/app/views/share/_resource_grid.html.erb
@@ -9,7 +9,7 @@
           <% content +=  k.to_s + ":" + v.to_s + "\n" %>
         <% end %>
 
-        <%= link_to image_tag('heihei.jpg'), resources[i], remote: true, class: 'resource-img', "data-toggle" => "popover", title: resources[i].name, "data-content" => content %>
+        <%= link_to image_tag('heihei.jpg'), resources[i], remote: true, class: 'resource-img', "data-toggle" => "popover", title: resources[i].name, "data-content" => content, 'data-placement' => '' %>
         <figcaption>
         <span><%= resources[i].name %></span>
         <% descriptions[i].each do |k,v| %>
