应用浏览、开发者模式视图优化

--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -8,6 +8,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav pull-right">
         <% if signin? %>
+					<li><%= link_to "我的主页", pages_index_path %></li>
           <li><%= link_to "创建应用", pages_createapp_path %></li>
           <li><%= link_to "浏览应用", pages_apps_path %></li>
           <li><%= link_to "浏览资源", pages_resources_path %></li>
