--- a/app/views/sensors/_form.html.erb
+++ b/app/views/sensors/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@sensor) do |f| %>
+<%= form_for [current_user, @sensor] do |f| %>
   <% if @sensor.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@sensor.errors.count, "error") %> prohibited this sensor from being saved:</h2>
