浏览资源页面优化

--- a/app/views/actuators/show.html.erb
+++ b/app/views/actuators/show.html.erb
@@ -11,4 +11,4 @@
 </p>
 
 <%= link_to 'Edit', edit_actuator_path(@actuator) %> |
-<%= link_to 'Back', actuators_path %>
+<%= link_to 'Back', pages_developer_path %>
