--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,9 +74,9 @@ padding-right: 17px;
  }
 .top {
   padding:40px 0;
-  background-image: image-url("top2.jpg");
-  background-repeat: no-repeat;
-  background-position: 50% 45%;
+  background-image: image-url("zuile.gif");
+  background-repeat: repeat;
+  background-position: 50% 0;
   //margin:1px 0 15px 0;
   margin-top: 10px;
   min-height:300px;
@@ -104,6 +104,8 @@ padding-right: 17px;
       color: #fff;
       font-size: 16px;
     }
+    
+    
 }
 //设置middle
 
@@ -167,5 +169,10 @@ display:inline;
   display:none;
 }
 
-//create app
+.tab-content {
+  
+  label {
+    color:#000;
+  }
 
+}
